Fixes some broken markdown link errors

--- a/calico/getting-started/kubernetes/community-tested.mdx
+++ b/calico/getting-started/kubernetes/community-tested.mdx
@@ -6,27 +6,27 @@ description: Provides community inputs on what versions of Kubernetes and platfo
 
 ## About {{prodname}} testing
 
-{{prodname}} is tested each release against the Kubernetes versions listed in [System requirements](system-requirements.mdx). 
+{{prodname}} is tested each release against the Kubernetes versions listed in [System requirements](requirements.mdx). 
 
 {{prodname}} works on many different platforms. The following are common platforms that {{prodname}} tests with some regularity.  
 
 - [AKS](managed-public-cloud/aks.mdx)
-- [Azure](../../getting-started/kubernetes/self-managed-public-cloud/azure)
-- [DigitalOcean](../../getting-started/kubernetes/self-managed-public-cloud/do)
-- [EKS](../../getting-started/kubernetes/managed-public-cloud/eks)
-- [Flannel](../../../getting-started/kubernetes/flannel/)
-- [GCE](../../getting-started/kubernetes/self-managed-public-cloud/gce)
-- [GKE](../../getting-started/kubernetes/managed-public-cloud/gke)
-- [IKS](../../getting-started/kubernetes/managed-public-cloud/iks)
-- [K3s](../../getting-started/kubernetes/k3s/)
-- [kOps on AWS](../../getting-started/kubernetes/self-managed-public-cloud/aws)
-- [Kubernetes-kubeadm](../../getting-started/kubernetes/self-managed-onprem/onpremises)
-- [MicroK8s](../../getting-started/kubernetes/microk8s)
-- [Minikube](../../getting-started/kubernetes/minikube)
-- [OpenShift](../../getting-started/kubernetes/openshift/)
-- [OpenStack](../getting-started/openstack/)
-- [RKE](../../getting-started/kubernetes/rancher)
-- [Calico for Windows](../../getting-started/kubernetes/windows-calico/)
+- [Azure](self-managed-public-cloud/azure.mdx)
+- [DigitalOcean](self-managed-public-cloud/do.mdx)
+- [EKS](managed-public-cloud/eks.mdx)
+- [Flannel](flannel/install-for-flannel.mdx)
+- [GCE](self-managed-public-cloud/gce.mdx)
+- [GKE](managed-public-cloud/gke.mdx)
+- [IKS](managed-public-cloud/iks.mdx)
+- [K3s](k3s/index.mdx)
+- [kOps on AWS](self-managed-public-cloud/aws)
+- [Kubernetes-kubeadm](self-managed-onprem/onpremises)
+- [MicroK8s](microk8s)
+- [Minikube](minikube)
+- [OpenShift](openshift/installation.mdx)
+- [OpenStack](../openstack/overview.mdx)
+- [RKE](rancher.mdx)
+- [Calico for Windows](windows-calico/quickstart.mdx)
 
 ## Community-tested versions and platforms
 
