--- a/calico-cloud/operations/comms/certificate-management.mdx
+++ b/calico-cloud/operations/comms/certificate-management.mdx
@@ -20,8 +20,7 @@ certificate issuance, {{prodname}} provides a simple configuration option that y
 
 If your cluster is already running {{prodname}} and you would like to enable certificate management, you need to
 temporarily remove [the logstorage resource](../../reference/installation/api.mdx#operator.tigera.io/v1.LogStorage)
-before following the steps to enable certificate management and then re-apply afterwards. For detailed steps on
-re-creating logstorage, read more on [how to create a new Elasticsearch cluster](../../visibility/elastic/troubleshoot.mdx#how-to-create-a-new-cluster).
+before following the steps to enable certificate management and then re-apply afterwards.
 
 Currently, this feature is not supported in combination with [Multi-cluster management](/multicluster/create-a-management-cluster/).
 
