--- a/calico-enterprise_versioned_docs/version-3.14/operations/clis/calicoctl/configure/overview.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/operations/clis/calicoctl/configure/overview.mdx
@@ -40,12 +40,7 @@ spec:
 
 If `calicoctl` cannot locate, read, or access a configuration file, it will check a specific set of environment variables.
 
-Refer to the section that corresponds to your datastore type for a full set of options
-and examples.
-
-- [Kubernetes API datastore](/operations/clis/calicoctl/configure/kdd/)
-
-- [etcd datastore](/operations/clis/calicoctl/configure/etcd/)
+For a full set of options and examples, see [Configure calicoctl to connect to the datastore](datastore.mdx)
 
 :::note
 
