Updates for 3.16/next

--- a/calico-enterprise_versioned_docs/version-3.16/getting-started/compatibility.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/getting-started/compatibility.mdx
@@ -39,6 +39,7 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | {{prodname}} support                                                                     |
 | -------------------- | ---------------------------------------------------------------------------------------- |
+| 3.16                 | - {{prodname}} CNI with network policy<br />- Azure CNI with {{prodname}} network policy |
 | 3.15                 | - {{prodname}} CNI with network policy<br />- Azure CNI with {{prodname}} network policy |
 | 3.14                 | - {{prodname}} CNI with network policy<br />- Azure CNI with {{prodname}} network policy |
 | 3.13                 | Azure CNI with {{prodname}} network policy                                               |
@@ -57,6 +58,7 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | {{prodname}} support                                                                   |
 | -------------------- | -------------------------------------------------------------------------------------- |
+| 3.16                 | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
 | 3.15                 | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
 | 3.14                 | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
 | 3.13                 | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
@@ -75,6 +77,7 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | {{prodname}} support                       |
 | -------------------- | ------------------------------------------ |
+| 3.16                 | - GKE CNI with {{prodname}} network policy |
 | 3.15                 | - GKE CNI with {{prodname}} network policy |
 | 3.14                 | - GKE CNI with {{prodname}} network policy |
 | 3.13                 | - GKE CNI with {{prodname}} network policy |
@@ -89,15 +92,16 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 ## kOps on AWS
 
-| {{prodname}} version | kOps and Kubernetes versions | {{prodname}} support                                                                   |
-| -------------------- | ---------------------------- | -------------------------------------------------------------------------------------- |
+| {{prodname}} version | kOps and Kubernetes versions | {{prodname}} support                                         |
+| -------------------- | ---------------------------- | ------------------------------------------------------------ |
+| 3.16                 | 1.23 - 1.25                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
 | 3.15                 | 1.23 - 1.25                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
 | 3.14                 | 1.21 - 1.23                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
 | 3.13                 | 1.21 - 1.23                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.12                 | 1.21, 1.22                   | - {{prodname}} CNI with network policy<br />- AWS CNI with{{prodname}} network policy  |
+| 3.12                 | 1.21, 1.22                   | - {{prodname}} CNI with network policy<br />- AWS CNI with{{prodname}} network policy |
 | 3.11                 | 1.20, 1.21                   | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
 | 3.10                 | 1.19, 1.20                   | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
-| 3.9                  | 1.20                         | - {{prodname}} CNI with network policy<br />- AWS CNI with{{prodname}} network policy  |
+| 3.9                  | 1.20                         | - {{prodname}} CNI with network policy<br />- AWS CNI with{{prodname}} network policy |
 | 3.8                  | 1.20                         | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
 | 3.7                  | 1.20                         | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
 | 3.6                  | 1.19                         | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
@@ -106,6 +110,7 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | Kubernetes/kubeadm versions | {{prodname}} support                 |
 | -------------------- | --------------------------- | ------------------------------------ |
+| 3.16                 | 1.23 - 1.25                 | {{prodname}} CNI with network policy |
 | 3.15                 | 1.23 - 1.25                 | {{prodname}} CNI with network policy |
 | 3.14                 | 1.21 - 1.23                 | {{prodname}} CNI with network policy |
 | 3.13                 | 1.21 - 1.23                 | {{prodname}} CNI with network policy |
@@ -122,6 +127,7 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | MKE version                          | {{prodname}} support                 | Kubernetes versions |
 | -------------------- | ------------------------------------ | ------------------------------------ | ------------------- |
+| 3.16                 | MKE 3.6                              | {{prodname}} CNI with network policy | 1.24                |
 | 3.15                 | MKE 3.6                              | {{prodname}} CNI with network policy | 1.24                |
 | 3.14                 | MKE 3.5                              | {{prodname}} CNI with network policy | 1.21                |
 | 3.13                 | MKE 3.5                              | {{prodname}} CNI with network policy | 1.21                |
@@ -138,6 +144,7 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | OpenShift versions for Kubernetes | {{prodname}} support                 |
 | -------------------- | --------------------------------- | ------------------------------------ |
+| 3.16                 | 4.9 - 4.11                        | {{prodname}} CNI with network policy |
 | 3.15                 | 4.9 - 4.11                        | {{prodname}} CNI with network policy |
 | 3.14                 | 4.8 - 4.10                        | {{prodname}} CNI with network policy |
 | 3.13                 | 4.8 - 4.10                        | {{prodname}} CNI with network policy |
@@ -154,6 +161,7 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | RKE version | {{prodname}} support                 | Kubernetes versions |
 | -------------------- | ----------- | ------------------------------------ | ------------------- |
+| 3.16                 | 1.3         | {{prodname}} CNI with network policy | 1.23                |
 | 3.15                 | 1.3         | {{prodname}} CNI with network policy | 1.23                |
 | 3.14                 | 1.3         | {{prodname}} CNI with network policy | 1.22                |
 | 3.13                 | 1.3         | {{prodname}} CNI with network policy | 1.21                |
@@ -168,15 +176,17 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 ## RKE2
 
-| {{prodname}} version | {{prodname}} support                 | Kubernetes versions |
-| -------------------- | ------------------------------------ | ------------------- |
-| 3.15                 | {{prodname}} CNI with network policy | 1.24                |
-| 3.14                 | {{prodname}} CNI with network policy | 1.22                |
+| {{prodname}} version | RKE2 version    | {{prodname}} support                 | Kubernetes versions |
+| -------------------- | --------------- | ------------------------------------ | ------------------- |
+| 3.16                 | 2.6.5 and later | {{prodname}} CNI with network policy | 1.24                |
+| 3.15                 | n/a             | {{prodname}} CNI with network policy | 1.24                |
+| 3.14                 | n/a             | {{prodname}} CNI with network policy | 1.22                |
 
 ## TKG
 
 | {{prodname}} version | TKG version | {{prodname}} support                 | Kubernetes versions    |
 | -------------------- | ----------- | ------------------------------------ | ---------------------- |
+| 3.16                 | 1.5         | {{prodname}} CNI with network policy | 1.22                   |
 | 3.15                 | 1.5         | {{prodname}} CNI with network policy | 1.22                   |
 | 3.14                 | 1.5         | {{prodname}} CNI with network policy | 1.21                   |
 | 3.13                 | 1.5         | {{prodname}} CNI with network policy | 1.21                   |
