--- a/calico-enterprise_versioned_docs/version-3.16/getting-started/compatibility.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/getting-started/compatibility.mdx
@@ -179,8 +179,8 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 | {{prodname}} version | RKE2 version    | {{prodname}} support                 | Kubernetes versions |
 | -------------------- | --------------- | ------------------------------------ | ------------------- |
 | 3.16                 | 2.6.5 and later | {{prodname}} CNI with network policy | 1.24                |
-| 3.15                 | n/a             | {{prodname}} CNI with network policy | 1.24                |
-| 3.14                 | n/a             | {{prodname}} CNI with network policy | 1.22                |
+| 3.15                 | RKE2-compatible cluster | {{prodname}} CNI with network policy | 1.24                |
+| 3.14                 | RKE2-compatible cluster             | {{prodname}} CNI with network policy | 1.22                |
 
 ## TKG
 
