--- a/calico-enterprise_versioned_docs/version-3.16/getting-started/compatibility.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/getting-started/compatibility.mdx
@@ -176,7 +176,7 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 ## RKE2
 
-| {{prodname}} version | RKE2 version    | {{prodname}} support                 | Kubernetes versions |
+| {{prodname}} version | {{prodname}} support                 | Kubernetes versions |
 | -------------------- | --------------- | ------------------------------------ | ------------------- |
 | 3.16                  | {{prodname}} CNI with network policy | 1.24 - 1.25                |
 | 3.15                 | RKE2-compatible cluster | {{prodname}} CNI with network policy | 1.24                |
