--- a/calico-enterprise_versioned_docs/version-3.16/getting-started/compatibility.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/getting-started/compatibility.mdx
@@ -179,7 +179,7 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 | {{prodname}} version | {{prodname}} support                 | Kubernetes versions |
 | -------------------- | ------------------------------------ | ------------------- |
 | 3.16                  | {{prodname}} CNI with network policy | 1.24 - 1.25                |
-| 3.15                 | RKE2-compatible cluster | {{prodname}} CNI with network policy | 1.24                |
+| 3.15                 | {{prodname}} CNI with network policy | 1.24                |
 | 3.14                 | RKE2-compatible cluster             | {{prodname}} CNI with network policy | 1.22                |
 
 ## TKG
