CE-RN-TLS-fix-3.15

--- a/calico-enterprise_versioned_docs/version-3.15/_includes/release-notes/_v3.15.1-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/_includes/release-notes/_v3.15.1-release-notes.mdx
@@ -13,7 +13,7 @@
 - To mitigate the "unhappy case" where many `calico-node` instances restart at once (for any reason), Typha's handling
   of new connections has been improved to share much of the work between different clients, this dramatically improves
   performance when dealing with a "thundering herd".
-- Updated TLS configurations to only use TLS1.2 and TLS1.3.
+- Updated TLS configurations to use only TLS1.2.
 - The images for FlexVolume, CSI, Node Driver Registrar are now pulled from our private `quay.io` registry.
 
 ### Bug Fixes
