--- a/calico-cloud_versioned_docs/version-3.15/image-assurance/install-the-admission-controller.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/image-assurance/install-the-admission-controller.mdx
@@ -4,6 +4,12 @@ description: Block vulnerable containers from being deployed into your cluster u
 
 # Create policy to block vulnerable images from your cluster
 
+:::note
+
+This feature is tech preview. Tech preview features may be subject to significant changes before they become GA.
+
+:::
+
 ## Big picture
 
 Protecting your cluster from vulnerable images can be very difficult. An image that appears to be secure today could
