--- a/calico-enterprise_versioned_docs/version-3.16/multicluster/federation/kubeconfig.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/multicluster/federation/kubeconfig.mdx
@@ -53,6 +53,11 @@ Although this example applies remote cluster configurations symmetrically across
 
 ## Before you begin
 
+**OpenShift users**
+
+{{prodname}} supports federated endpoint identity for OpenShift. However, the [federated services feature](services-controller.mdx)
+cannot be used, because OpenShift currently does not allow users to disable the `RestrictedEndpointsAdmission` plugin.
+
 **Supported networking**
 
 - {{prodname}} with BGP
