CE-missing-docs

--- a/calico-cloud/network-policy/policy-tiers/tiered-policy.mdx
+++ b/calico-cloud/network-policy/policy-tiers/tiered-policy.mdx
@@ -2,7 +2,7 @@
 description: Learn about policies, tiers, and policy evaluation.
 ---
 
-# Understanding policy tiers
+# Policy tiers tutorial
 
 ## Seamless network policy integration
 
