--- a/calico-cloud_versioned_docs/version-3.15/network-policy/policy-tiers/tiered-policy.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/network-policy/policy-tiers/tiered-policy.mdx
@@ -2,7 +2,7 @@
 description: Learn about policies, tiers, and policy evaluation.
 ---
 
-# Understanding policy tiers
+# Get started with policy tiers
 
 ## Seamless network policy integration
 
