--- a/calico-enterprise_versioned_docs/version-3.16/network-policy/policy-tiers/tiered-policy.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/network-policy/policy-tiers/tiered-policy.mdx
@@ -2,7 +2,7 @@
 description: Understand how tiered policy works and supports microsegmentation.
 ---
 
-# Get started with tiered policies
+# Get started with policy tiers
 
 ## Seamless network policy integration
 
