Fixes a few typos

--- a/calico-enterprise/networking/egress/external-network.mdx
+++ b/calico-enterprise/networking/egress/external-network.mdx
@@ -10,9 +10,9 @@ Allows workloads from different namespaces of a Kubernetes cluster to egress ont
 
 ## Value
 
-When traffic from particular applications leaves the cluster to access an external destination, egress gateway enables users to control the source IP of that traffic. However, in this case, egress gateway sees all the external destinations as a flat L3 network. If a user has a network topology which involves multiple external networks and the service endpoints in those networks may have overlapping IPs, it becomes a manatory requirement that {{prodname}} should be able to direct the egress traffic to the service endpoint in the designated network.
+When traffic from particular applications leaves the cluster to access an external destination, egress gateway enables users to control the source IP of that traffic. However, in this case, egress gateway sees all the external destinations as a flat L3 network. If a user has a network topology which involves multiple external networks and the service endpoints in those networks may have overlapping IPs, it becomes a mandatory requirement that {{prodname}} should be able to direct the egress traffic to the service endpoint in the designated network.
 
-For example, suppose a user has a network setup as blow:
+For example, suppose a user has a network setup as below:
 There are two external networks (Red and Yellow) outside the cluster. A web server on network Red is exposing its service at `105.8.10.1`. A database server on network Yellow is exposing its service at `105.8.10.1` too.
 
 Then the user could have the requirement as followings:
