--- a/calico-enterprise_versioned_docs/version-3.15/networking/egress/egress-gateway-aws.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/networking/egress/egress-gateway-aws.mdx
@@ -777,32 +777,32 @@ spec:
         command: ["/start-gateway.sh"]
         image: {{registry}}{% component_image("egress-gateway") %}
         env:
-         Optional: comma-delimited list of IP addresses to send ICMP pings to; if all probes fail, the egress
-         gateway will report non-ready.
+         # Optional: comma-delimited list of IP addresses to send ICMP pings to; if all probes fail, the egress
+         # gateway will report non-ready.
         - name: ICMP_PROBE_IPS
           value: ""
-         Only used if ICMP_PROBE_IPS is non-empty: interval to send probes.
+         # Only used if ICMP_PROBE_IPS is non-empty: interval to send probes.
         - name: ICMP_PROBE_INTERVAL
           value: "5s"
-         Only used if ICMP_PROBE_IPS is non-empty: timeout before reporting non-ready if there are no successful
-         ICMP probes.
+         # Only used if ICMP_PROBE_IPS is non-empty: timeout before reporting non-ready if there are no successful
+         # ICMP probes.
         - name: ICMP_PROBE_TIMEOUT
           value: "15s"
-         Optional comma-delimited list of HTTP URLs to send periodic probes to; if all probes fail, the egress
-         gateway will report non-ready.
+         # Optional comma-delimited list of HTTP URLs to send periodic probes to; if all probes fail, the egress
+         # gateway will report non-ready.
         - name: HTTP_PROBE_URLS
           value: ""
-         Only used if HTTP_PROBE_URL is non-empty: interval to send probes.
+         # Only used if HTTP_PROBE_URL is non-empty: interval to send probes.
         - name: HTTP_PROBE_INTERVAL
           value: "10s"
-         Only used if HTTP_PROBE_URL is non-empty: timeout before reporting non-ready if there are no successful
-         HTTP probes.
+         # Only used if HTTP_PROBE_URL is non-empty: timeout before reporting non-ready if there are no successful
+         # HTTP probes.
         - name: HTTP_PROBE_TIMEOUT
           value: "30s"
-         Port that the egress gateway serves its health reports.  Must match the readiness probe.
+         # Port that the egress gateway serves its health reports.  Must match the readiness probe.
         - name: HEALTH_PORT
           value: "8080"
-         Use downward API to tell the pod its own IP address.
+         # Use downward API to tell the pod its own IP address.
         - name: EGRESS_POD_IP
           valueFrom:
             fieldRef:
