--- a/calico-enterprise_versioned_docs/version-3.14/operations/clis/calicoq/installing.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/operations/clis/calicoq/installing.mdx
@@ -10,6 +10,13 @@ import MaintenanceClisCalicoqInstalling from '@site/calico-enterprise/_includes/
 
 You can run `calicoq` on any host with network access to the
 {{prodname}} datastore as either a binary or a container.
+
+:::note
+
+Ensure that you install the binary on a Linux machine. The binary does not work on other machines.
+
+:::
+
 For step-by-step instructions, refer to the section that
 corresponds to your desired deployment.
 
