--- a/calico-enterprise/operations/ebpf/install.mdx
+++ b/calico-enterprise/operations/ebpf/install.mdx
@@ -40,7 +40,7 @@ and in particular, pushing the networking capabilities of the latest Linux kerne
 - x86-64
 - Linux distribution/kernel:
 
-  - Ubuntu 20.04.
+  - Ubuntu 20.04 and 22.04.
   - Red Hat v8.2 with Linux kernel v4.18.0-193 or above (Red Hat have backported the required features to that build).
   - Another [supported distribution](../../getting-started/install-on-clusters/requirements.mdx) with Linux kernel v5.3 or above.
 
