Remove docs metadata from install-calico-windows.ps1 script

--- a/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/windows-calico/quickstart.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/windows-calico/quickstart.mdx
@@ -111,9 +111,9 @@ Note: if {{prodname}} is installed in kube-system, update the `namespace` in the
    mkdir c:\k
    ```
 
-1. Copy the Kubernetes kubeconfig file from the master node (default, Location $HOME/.kube/config), to **c:\k\config**.
+1. Copy the Kubernetes kubeconfig file from the control-plane node (default, Location $HOME/.kube/config), to **c:\k\config**.
 
-1. Copy the installation zip file to **c:\tigera-calico-windows.zip**.
+1. Copy the {{prodnameWindows}} installation zip file to **c:\tigera-calico-windows.zip**.
 
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
@@ -202,7 +202,9 @@ Note: if {{prodname}} is installed in kube-system, update the `namespace` in the
    mkdir c:\k
    ```
 
-1. Copy the Kubernetes kubeconfig file from the master node (default, Location $HOME/.kube/config), to **c:\k\config**.
+1. Copy the Kubernetes kubeconfig file from the control-plane node (default, Location $HOME/.kube/config), to **c:\k\config**.
+
+1. Copy the {{prodnameWindows}} installation zip file to **c:\tigera-calico-windows.zip**.
 
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
@@ -276,6 +278,8 @@ Note: if {{prodname}} is installed in kube-system, update the `namespace` in the
    ```
 
 1. [Install kubectl](https://docs.aws.amazon.com/eks/latest/userguide/install-kubectl.html#windows) and move the kubectl binary to **c:\k**.
+
+1. Copy the {{prodnameWindows}} installation zip file to **c:\tigera-calico-windows.zip**.
 
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
