--- a/calico/getting-started/kubernetes/windows-calico/quickstart.mdx
+++ b/calico/getting-started/kubernetes/windows-calico/quickstart.mdx
@@ -101,7 +101,7 @@ The following steps install a Kubernetes cluster on a single Windows node with a
    mkdir c:\k
    ```
 
-1. Copy the Kubernetes kubeconfig file from the master node (default, Location $HOME/.kube/config), to **c:\k\config**.
+1. Copy the Kubernetes kubeconfig file from the control-plane node (default, Location $HOME/.kube/config), to **c:\k\config**.
 
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
@@ -199,7 +199,7 @@ The following steps install a Kubernetes cluster on a single Windows node with a
    mkdir c:\k
    ```
 
-1. Copy the Kubernetes kubeconfig file from the master node (default, Location $HOME/.kube/config), to **c:\k\config**.
+1. Copy the Kubernetes kubeconfig file from the control-plane node (default, Location $HOME/.kube/config), to **c:\k\config**.
 
 1. Download the PowerShell script, **install-calico-windows.ps1**.
 
