--- a/calico-enterprise_versioned_docs/version-3.15/getting-started/install-on-clusters/windows-calico/kubernetes/requirements.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/getting-started/install-on-clusters/windows-calico/kubernetes/requirements.mdx
@@ -70,8 +70,8 @@ For operator-managed Linux {{prodname}} clusters, three Linux worker nodes are r
 
 - Windows versions:
 
-  - Windows Server 1809 (build Build 17763.1432 or greater)
-  - Windows Server 20H2 (build 19042)
+  - Windows Server 1809 (build 17763.1432 or later)
+  - Windows Server 2022 (build 20348.169 or later)
 
   :::note
 
