--- a/calico-enterprise_versioned_docs/version-3.16/network-policy/policy-recommendations.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/network-policy/policy-recommendations.mdx
@@ -10,7 +10,7 @@ Enable continuous policy recommendations.
 
 ## Value
 
-After you install Calico Enterprise, the recommended zero-trust security stance is to deny traffic flows to protect the cluster. Although this is a good thing, allowing traffic requires writing tiered network policy. Writing policy for tiers that follows best practices can be an obstacle to quickly getting clusters up to observe allowed traffic. 
+After you install {{prodname}}, the recommended zero-trust security stance is to deny traffic flows to protect the cluster. Although this is a good thing, allowing traffic requires writing tiered network policy. Writing policy for tiers that follows best practices can be an obstacle to quickly getting clusters up to observe allowed traffic. 
 
 Developers with no experience can get {{prodname}} policy recommendations that allow traffic, but still secure workloads to/from the cluster’s namespaces. In a safe staging environment, developers can immediately get visibility into the impact of network traffic flows. 
 
@@ -18,7 +18,7 @@ Developers with no experience can get {{prodname}} policy recommendations that a
 
 **Required**
 
-To enable/disable policy recommendation, you must have the **tigera-admin** role or permissions to the **Policy Recommendation** resource. 
+To enable/disable policy recommendation, you must have the **tigera-admin** role or permissions to the **Policy Recommendations** resource. 
 
 **Recommended**
 Basic knowledge of policies and tiers:
@@ -27,7 +27,7 @@ Basic knowledge of policies and tiers:
 
 **Limitations**
 
-In this release, managing policy recommendations is available only in Manager UI. `kubectl` commands are available to update Policy Recommendation parameters.
+In this release, managing policy recommendations is available only in Manager UI. `kubectl` commands are available to update Policy Recommendations parameters.
 
 ## How to
 
@@ -35,7 +35,7 @@ In this release, managing policy recommendations is available only in Manager UI
 - [Activate policy recommendations](#activate-policy-recommendations) 
 - [Manage policy recommendations](#manage-policy-recommendations)
 - [Troubleshoot policy recommendations](#troubleshoot-policy-recommendations)
-- [Change policy recommendation parameters](#change-policy-recommendation-parameters)
+- [Change policy recommendations parameters](#change-policy-recommendations-parameters)
 - [Disable policy recommendations](#disable-policy-recommendations)
 
 ### Enable policy recommendations
@@ -116,6 +116,11 @@ To verify that you have traffic flows, follow these steps:
 1. Scroll over to the flow log’s policies field to investigate which policy or policies denied this flow. (For help, see [Flow log types](../../visibility/elastic/flow/datatypes#big-picture).
 
 If you do not have denied traffic, but still want to test policy recommendations, you can create sample pods, namespaces, and denied traffic. For help, see [Create denied traffic flows to get policy recommendations](). 
+
+### Change policy recommendations parameters
+
+You can change policy recommendation parameters using the [Policy recommendation resource](../reference/resources/policyrecommendations). For example, you may want to change the interval for which you want flow logs to be processed, or the amount of time you want for a policy to keep processing flows for until it’s considered stable. You can also filter out namespaces. 
+
    
 ## Above and beyond
 
